--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+backports.zoneinfo==0.2.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 Django==4.1.5
@@ -10,7 +11,10 @@ djangorestframework-simplejwt==5.2.2
 fire==0.5.0
 gunicorn==20.1.0
 idna==3.4
+psycopg2-binary==2.9.6
 PyJWT==2.6.0
+python-dotenv==1.0.0
+python-environ==0.4.54
 pytz==2022.7.1
 rcssmin==1.1.1
 requests==2.28.2
